[gd_scene load_steps=2 format=3 uid="uid://bq5hsdydfgnqc"]

[ext_resource type="Script" uid="uid://d3dxmni1ryoc4" path="res://Node2D.gd" id="1_l6o2s"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_l6o2s")

[node name="homescroll" type="ScrollContainer" parent="."]
offset_right = 408.0
offset_bottom = 646.0

[node name="homevbox" type="VBoxContainer" parent="homescroll"]
layout_mode = 2

[node name="awayscroll" type="ScrollContainer" parent="."]
offset_left = 744.0
offset_right = 1152.0
offset_bottom = 646.0

[node name="awayvbox" type="VBoxContainer" parent="awayscroll"]
layout_mode = 2

[node name="SelectedTeamLeft" type="Label" parent="."]
offset_left = 448.0
offset_top = 128.0
offset_right = 704.0
offset_bottom = 224.0

[node name="SelectedTeamRight" type="Label" parent="."]
offset_left = 448.0
offset_top = 416.0
offset_right = 704.0
offset_bottom = 512.0

[node name="Panel" type="Panel" parent="."]
offset_left = 408.0
offset_right = 744.0
offset_bottom = 648.0
metadata/_edit_lock_ = true

[node name="SimulateButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 328.0
offset_right = 672.0
offset_bottom = 392.0
text = "Simulate"

[node name="PlayGameButton" type="Button" parent="."]
offset_left = 480.0
offset_top = 248.0
offset_right = 672.0
offset_bottom = 312.0
text = "Play"

[connection signal="pressed" from="SimulateButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PlayGameButton" to="." method="_on_play_game_button_pressed"]
